--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>com.DamianFutyma.zipcCodes</groupId>
     <artifactId>ZipCodesFinder</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180130</version>
+        </dependency>
+    </dependencies>
 
 </project>
